# FEC

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
01-chainfrost-cold-chain/: README.md  checkstyle.xml  pom.xml
02-campuspulse-smart-campus/: README.md  eslint.config.js  package-lock.json  package.json
03-aerosense-air-quality/: README.md
03-aerosense-air-quality/sensors/: bands.py  pyproject.toml  requirements.txt  run_rig.py  sensor_rig.py  units.py
03-aerosense-air-quality/sensors/profiles/: zone_default.yaml  zone_meeting_room.yaml  zone_server_room.yaml
03-aerosense-air-quality/sensors/tests/: test_profiles.py  test_sensor_rig.py
04-gridpulse-ev-transformer/: README.md  eslint.config.js  package-lock.json  package.json
05-aquasentinel-fish-farm-water-quality/: README.md  ruff.toml
06-greengrassguard-predictive-maintenance/: README.md  ruff.toml
07-greengrid-microclimate/: README.md  local_dev_shim.py
08-officeiq-smart-office-comfort/: README.md  eslint.config.js  package-lock.json  package.json
09-floodwatch-river-early-warning/: README.md  checkstyle.xml  pom.xml
10-flowforge-pump-efficiency/: README.md  checkstyle.xml  pom.xml
11-parkfog-kerbside-occupancy/: README.md  eslint.config.js  package-lock.json  package.json
12-guardianedge-fall-detection/: README.md  checkstyle.xml  pom.xml
13-greenhouseguard/: README.md  eslint.config.js  package-lock.json  package.json
14-binsight-waste-routing/: README.md  checkstyle.xml  pom.xml
15-harborpulse-vessel-monitoring/: README.md  ruff.toml
(+1105 files in other folders)
